[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = "jogfeelingvi"
authors = ["jogfeelingvi <lifelse@outlook.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
